# jun

./: .gitignore  Cargo.toml  README.md  RELEASES.md
.zed/: settings.json
anon/: Cargo.toml
anon/src/: lib.rs
jun/: Cargo.toml  README.md  flake.nix  i18n.yaml  index.html
jun/assets/: i18n.yaml  manifest.json  sw.js
jun/src/: app.rs  i18n.rs  language.rs  lib.rs  main.rs  message.rs  state.rs  views.rs
jun/src/views/: app.rs  empty_screen.rs  game_progression.rs  jun_stats.rs  player_stats.rs  save_slot_picker.rs
jun/src/views/app/: content.rs  jun.rs  side_panel.rs  top_panel.rs
jun/wix/: main.wxs
mdrg/: Cargo.toml  README.md
mdrg/src/: common.rs  email.rs  events.rs  item.rs  items.rs  lib.rs  managers.rs  mods.rs  news.rs  save.rs  substates.rs
mdrg/src/common/: keyed_values.rs  mod.rs
mdrg/src/items/: item.rs  item_condition.rs  item_requests.rs  mod.rs
mdrg/src/save/: dialogue_chain.rs  filetime_chrono.rs  flag.rs  mod.rs  slot.rs
mdrg/src/substates/: bot_status_app.rs  cocktracts.rs  cocktwitch.rs  cooking_minigame.rs  deliveries.rs  fishing_minigame.rs  join_us_blog.rs  mod.rs  stock_market.rs
