[workspace]
resolver = "3"
members = ["anon","jun", "mdrg"]

[workspace.dependencies]
# Used by mdrg to declare the savefile format
serde = { version = "1.0.228", features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"]}
num_enum = "0.7.5"

# -- JUN --

# Used by jun to parse the json file into a serde structure
serde_json = "1.0.149"

# Used by jun for the GUI
iced = "0.14.0"
iced_aw = { version = "0.13.1", features = ["menu", "tab_bar", "tabs", "color_picker"]}

# Used by jun for the file dialog
rfd = "0.17.2"

# i18n
typed-i18n = "0.6.2"

# -- TUI --


[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 } # Pedantic takes priority on the others

print_stdout = "deny" # Its a lib and we should never print with println!
