[workspace]
resolver = "3"
members = ["jun", "mdrg"]

[workspace.dependencies]
# -- MDRG --

# Used to declare the savefile format
serde = { version = "1.0.228", features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"]}
nt-time = { version = "0.15.0", features = ["serde", "chrono"]}
num_enum = "0.7.6"

# -- Jun and TUI --
mdrg = { version = "0.90.0", path = "./mdrg" }
log = "0.4.29"

# Used to parse the json file into a serde structure
serde_json = "1.0.149"

# i18n
typed-i18n = "0.6.2"
sys-locale = "0.3.2"

# -- JUN --

# Used for the GUI
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

# Images loading
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png", "ico"] }
egui_material_icons = "0.5.0"

# Used for the file dialog
rfd = "0.17.2"

# -- TUI --
# N/A

[profile.release]
opt-level = 3
strip = true

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"

[workspace.lints.clippy]
all = { level = "warn", priority = -2 }
nursery = { level = "warn", priority = -2 }
cargo = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 } # Pedantic takes priority on the others
multiple_crate_versions = "allow"
print_stdout = "deny" # Its a lib and we should never print with println!
