[package]
name = "jun"
version = "1.0.5" # Mostly pride versioning
authors = ["imtrisha <imtrisha@noreply.codeberg.org>"]
edition = "2024"
description = "A GUI save file editor for MDRG save files"
repository = "https://github.com/im-trisha/jun"
readme = "README.md"
license = "MIT"
keywords = ["mdrg", "save", "my dystopian robot girlfriend"]
categories = ["game-development", "gui", "development-tools"]

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[package.metadata.wix]
upgrade-guid = "23BEDA60-7062-42DD-8374-24B008022152"
path-guid = "F6E63231-1A52-4578-9AF7-DC835697CCA2"
license = false
eula = false

[dependencies]
egui.workspace = true
eframe.workspace = true

serde.workspace = true
typed-i18n.workspace = true
sys-locale.workspace = true
mdrg.workspace = true
serde_json.workspace = true
rfd.workspace = true
egui_extras.workspace = true
egui_material_icons.workspace = true
log.workspace = true

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.9"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.64"
web-sys = "0.3.91"              # to access the DOM (to hide the loading text)
