[package]
name = "mdrg"
version = "0.1.0"
edition = "2024"
publish = true
description = "A library defining the MDRG save file format structure"
repository = "https://github.com/im-trisha/jun"
readme = "README.md"
license = "MIT"
keywords = ["mdrg", "save", "my dystopian robot girlfriend"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
semver.workspace = true
num_enum.workspace = true

# We shouldn't use this, its temporary as long as we don't know 100% of the save file
serde_json.workspace = true

[features]
derive-clone = []
derive-debug = []
