[package]
name = "mdrg"
version = "0.90.0"
edition = "2024"
publish = true
description = "A library defining the MDRG save file format structure"
repository = "https://github.com/im-trisha/jun"
readme = "README.md"
license = "MIT"
keywords = ["mdrg", "save", "my dystopian robot girlfriend"]
categories = ["encoding"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
semver.workspace = true
num_enum.workspace = true
nt-time.workspace = true


serde_json.workspace = true

[features]
derive-clone = []
derive-debug = []
